--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,13 @@
 .banner {
     
   max-width: 100%;
-    height: auto;
+  height: 100%;
    
     background-size: cover;
     background-position: center;
     color: #fff;
     position: center;
+    
     z-index: 1;
 
    
@@ -27,7 +28,7 @@
 .navbar2 {
     width: 100%;
     font-size: 15px;
-    display: flex;
+   
     position: fixed;
     justify-content: space-between;
     z-index: 2;
@@ -39,10 +40,7 @@
     cursor: pointer;
 }
 
-.logo img {
-    width: 80px;
-    margin: 20px;
-}
+
 
 nav, .navbar ul {
     display: flex;
@@ -169,14 +167,14 @@ button {
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
+   
+  }
+  .logo{
+    width: 40px;
   }
 }
 
-.img {
-  width: 50%;
-  height:auto;
-  
-}
+
 
 .responsive-image {
 
@@ -190,9 +188,14 @@ button {
   .img-banner{
     width: 1800px;
     max-width: 100%;
+   
+    max-height: 100vh;
+  }
+  .img-logo{
+    width: 80px;
+    max-width: 100%;
     height: auto;
   }
-  
 .container {
  display: grid;
  align-items: center; 
